# prune.rs

./: Cargo.toml  Cask.toml  Makefile  README.md  rulers.txt
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs  ruler.rs  walker.rs
