[package]
name = "prune"
version = "0.1.0"
authors = ["Axetroy <axetroy.dev@gmail.com>"]
licens = "MIT"
readme = "README.md"
keywords = ["prune", "clear"]
repository = "https://github.com/axetroy/prune.rs"
description = """
A cli tool for streamline your disk space and delete some unnecessary files.
"""

edition = "2021"

[[bin]]
name = "prune"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.2"
futures = "0.3.21"
async-recursion = "1.0.0"